# Pong-DQN

./: .gitignore  README.md  pyproject.toml
src/: dqn_agent.py  main.ipynb  main.py  model.py  replay_buffer.py  train.py  utils.py
src/checkpoints/best/: pong-policy-net-530.pt
src/metrics_results/: epsilon.json  steps.json  total_loss.json  total_reward.json
src/pong_dqn.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/runs/pong_dqn_2024-11-01_19-23-38/: events.out.tfevents.1730485418.PC-Yanel.254629.0
src/runs/pong_dqn_2024-11-01_19-24-36/: events.out.tfevents.1730485476.PC-Yanel.256591.0
src/runs/pong_dqn_2024-11-01_19-25-10/: events.out.tfevents.1730485510.PC-Yanel.256591.1
src/runs/pong_dqn_2024-11-01_19-25-18/: events.out.tfevents.1730485518.PC-Yanel.258963.0
src/runs/pong_dqn_2024-11-01_19-25-32/: events.out.tfevents.1730486356.PC-Yanel.259017.1  events.out.tfevents.1730486381.PC-Yanel.259017.2
src/runs/pong_dqn_2024-11-01_19-41-36/: events.out.tfevents.1730486496.PC-Yanel.259017.3
src/runs/pong_dqn_2024-11-01_19-44-08/: events.out.tfevents.1730486648.PC-Yanel.259017.4
src/runs/pong_dqn_2024-11-01_19-47-14/: events.out.tfevents.1730486834.PC-Yanel.259017.6
src/runs/pong_dqn_2024-11-01_19-57-11/: events.out.tfevents.1730487431.PC-Yanel.259017.8
src/runs/pong_dqn_2024-11-01_19-57-55/: events.out.tfevents.1730487475.PC-Yanel.259017.9
src/runs/pong_dqn_2024-11-01_19-59-12/: events.out.tfevents.1730487552.PC-Yanel.259017.11
src/runs/pong_dqn_2024-11-01_19-59-48/: events.out.tfevents.1730487588.PC-Yanel.259017.12
(+23 files in other folders)
