[project]
name = "pong-dqn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ale-py==0.10.1",
    "gymnasium==1.0.0",
    "matplotlib>=3.9.2",
    "numpy==1.26.4",
    "opencv-python>=4.10.0.84",
    "tqdm>=4.66.5",
    "torch==2.2.0",
    "ipykernel>=6.29.5",
    "tensorboard>=2.18.0",
]
